--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.30",
     "@types/pug": "^2.0.6",
+    "bcrypt": "^5.0.1",
     "express": "^4.18.0",
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
